Some overhauls to compare_result.py

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/lib/cpp/cpdsa"]
 	path = src/lib/cpp/cpdsa
 	url = https://github.com/t-p-r/cpdsa
+[submodule "src/lib/cpp/testlib-asimon"]
+	path = src/lib/cpp/testlib-asimon
+	url = https://github.com/t-p-r/testlib-asimon
