update C++ source directory

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "src/cpp/lib/cpdsa"]
-	path = src/cpp/lib/cpdsa
+[submodule "src/workspace/lib/cpdsa"]
+	path = src/workspace/lib/cpdsa
 	url = https://github.com/t-p-r/cpdsa
-[submodule "src/cpp/lib/testlib-asimon"]
-	path = src/cpp/lib/testlib-asimon
+[submodule "src/workspace/lib/testlib-asimon"]
+	path = src/workspace/lib/testlib-asimon
 	url = https://github.com/t-p-r/testlib-asimon
