update submodule (hopefully the last time)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "src/workspace/lib/cpdsa"]
 	path = src/workspace/lib/cpdsa
 	url = https://github.com/t-p-r/cpdsa
+	branch = main
 [submodule "src/workspace/lib/testlib"]
 	path = src/workspace/lib/testlib
 	url = https://github.com/MikeMirzayanov/testlib/
+	branch = master
